--- a/platforms/android/Rousing/app/src/main/res/values/strings.xml
+++ b/platforms/android/Rousing/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="LIFXtoken">c7d77fe4b94a81d39eb21623a63b1fc82388c072b7aa5796013bee73cf1a12d1</string>
     <string name="LIFXID">d073d531f221</string>
     <string name="NO_LIGHTS_STRING">No configured devices found. Press this button to search for lights in your network.</string>
+    <string name="addNewDeviceButton">Add new light</string>
 </resources>
